# MCP-Obsidian-Streamable-HTTP-Agent

./: .env.example  .gitignore  README.md  obsidian_agent_app.py  pyproject.toml  requirements.txt
src/agente_obsidian/: __init__.py  agent.py  cli.py  config.py  obsidian_client.py
